# OpenCL

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  ReadmeWSLnVidia.md
Old/MatrixMultiplicationNaiveGPU/: CMakeLists.txt
Old/MatrixMultiplicationNaiveGPU/buildwin/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MatrixMultiplicationNaiveGPU.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Old/MatrixMultiplicationNaiveGPU/buildwin/src/: MatrixMultiplicationNaiveGPU.vcxproj  MatrixMultiplicationNaiveGPU.vcxproj.filters  cmake_install.cmake
Old/MatrixMultiplicationNaiveGPU/include/: MatrixMultiplicationNaiveGPU.hpp
Old/MatrixMultiplicationNaiveGPU/src/: CMakeLists.txt  MatrixMultiplicationNaiveGPU.cpp  MatrixMultiplicationNaiveGPUMain.cpp  MatrixMultiplicationNaiveGPU_Kernels.cl
Old/OpenCLTemplate2.9/: CMakeLists.txt  OpenCLTemplate.sln  TemplateVS10.vcxproj
Old/OpenCLTemplate2.9/buildCygwin/: CMakeCache.txt  Makefile  cmake_install.cmake
Old/OpenCLTemplate2.9/buildLinux/: CMakeCache.txt  Makefile  cmake_install.cmake
Old/OpenCLTemplate2.9/buldlinux/: CMakeCache.txt  Makefile  cmake_install.cmake
Old/OpenCLTemplate2.9/include/: OpenCLTemplate.hpp
Old/OpenCLTemplate2.9/src/: OpenCLTemplate.cpp  OpenCLTemplateMain.cpp
Old/OpenCLTemplate3.0/: CMakeLists.txt
Old/OpenCLTemplate3.0/buildwin/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  OpenCLTemplate.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Old/OpenCLTemplate3.0/buildwin/src/: OpenCLTemplate.vcxproj  OpenCLTemplate.vcxproj.filters  cmake_install.cmake
Old/OpenCLTemplate3.0/docs/: README.MD
Old/OpenCLTemplate3.0/include/: OpenCLTemplate.hpp  Timer.h
Old/OpenCLTemplate3.0/src/: CMakeLists.txt  OpenCLTemplate.cpp  Timer.cpp
OpenCLMatMult/: .gitignore  LICENSE.md  README.md
OpenCLMatMult/buildVS2013/: OpenCLMatMult.sln  OpenCLMatMult.vcxproj  OpenCLMatMult.vcxproj.filters
OpenCLMatMult/buildVS2022/: OpenCLMatMult.sln
OpenCLMatMult/include/: opencl.hpp
OpenCLMatMult/src/: CMakeLists.txt  MatMult_Kernels.cl  main.cpp
OpenCLMultiDevice/: CMakeLists.txt  README.md
OpenCLMultiDevice/src/: MatMult_Kernels.cl  main.cpp
OpenCLTemplate3.1/: CMakeLists.txt  LICENSE.md
OpenCLTemplate3.1/buildVS2013/: OpenCLTemplate3.1.sln  OpenCLTemplate3.1.vcxproj  OpenCLTemplate3.1.vcxproj.filters
OpenCLTemplate3.1/buildVS2022/: OpenCLTemplate3.1.sln  OpenCLTemplate3.1.vcxproj.filters
OpenCLTemplate3.1/include/: OpenCLTemplate.hpp
OpenCLTemplate3.1/src/: CMakeLists.txt  OpenCLTemplate.cpp  OpenCLTemplateMain.cpp  OpenCLTemplate_Kernels.cl
OpenCLWrapper/: CMakeLists.txt  README.md
OpenCLWrapper/buildVS2022/: OpenCLWrapper.sln  OpenCLWrapper.vcxproj  OpenCLWrapper.vcxproj.filters
OpenCLWrapper/include/: utilities.hpp
OpenCLWrapper/src/: kernels.cl  main.cpp
OpenCLWrapperSimple/: CMakeLists.txt  README.md
OpenCLWrapperSimple/buildVS2013/: OpenCLWrapperSimple.sln  OpenCLWrapperSimple.vcxproj
OpenCLWrapperSimple/buildVS2022/: OpenCLWrapperSimple.sln  OpenCLWrapperSimple.vcxproj
OpenCLWrapperSimple/include/: opencl.hpp
OpenCLWrapperSimple/src/: CMakeLists.txt  kernels.cl  main.cpp
OpenCLWrapperTemplate3.1/: CMakeLists.txt  LICENSE.md  README.md
OpenCLWrapperTemplate3.1/buildVS2013/: OpenCLWrapper.sln  OpenCLWrapper.vcxproj  OpenCLWrapper.vcxproj.filters
OpenCLWrapperTemplate3.1/buildVS2022/: OpenCLWrapperTemplate3.1.sln  OpenCLWrapperTemplate3.1.vcxproj
OpenCLWrapperTemplate3.1/include/: kernel.hpp  utilities.hpp
OpenCLWrapperTemplate3.1/src/: kernels.cl  main.cpp
buildVS2022/: OpenCLMatMult.vcxproj  OpenCLMatMult.vcxproj.filters  OpenCLTemplate3.1.vcxproj
include/: kernel.hpp  opencl.hpp  utilities.hpp
src/: CMakeLists.txt  kernels.cl  main.cpp
